--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -121,6 +121,7 @@ $box-shadow-right: 3px 0px 2px $grey-40;
 
 /* BREAKPOINTS */
 $breakpoints: (
+    xs: 365px,
     s: 576px, 
     md: 768px, 
     lg: 992px, 
